--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "proxy": "http://localhost:3000/quiz_app",
   "dependencies": {
+    "-": "^0.0.1",
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.13.2",
+    "baseline-browser-mapping": "^2.8.29",
     "bootstrap": "^5.3.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
